@@ -10,6 +10,9 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #14378: Fix compiling ast.ImportFrom nodes with a "__future__" string as
+  the module name that was not interned.
+
 - Issue #14331: Use significantly less stack space when importing modules by
   allocating path buffers on the heap instead of the stack.
 
